# volume-modeler

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  TODO.md
config/: config.h.in
demo/: CMakeLists.txt  main.cpp
kernels/: raymarcher.cl  samplers.cl
media/kernels/: contour.cl  generic_sampler.cl  math-utils.h  qef.cl  qef_solver.h  samplers.cl  selectors.cl  utils.h
media/shaders/: box-fs.glsl  box-vs.glsl  passthrough-fs.glsl  passthrough-gs.glsl  passthrough-vs.glsl  texture-fs.glsl
shaders/: box-gs.glsl  compositor-fs.glsl  raymarcher-fs.glsl  raymarcher-vs.glsl  raymarcher.glsl  sampler.glsl  texture-fs.glsl
src/: CMakeLists.txt  main.cpp
src/compute/: context.cpp  context.h  interop.h  scan.cpp  scan.h  utils.h
src/dc/: mesher.cpp  mesher.h  sampler.cpp  sampler.h
src/gfx/: buffer.cpp  buffer.h  compute-context.cpp  compute-context.h  image.h  program.cpp  program.h  renderer.cpp  renderer.h  texture.cpp  texture.h
src/math/: aabb.cpp  aabb.h
src/scene/: brush-ball.h  brush-cube.h  brush.h  camera.cpp  camera.h  chunk.cpp  chunk.h  scene-archive.cpp  scene-archive.h  scene.cpp  scene.h
src/utils/: compute-interop.h  log.cpp  log.h  persistence.h  thread-pool.cpp  thread-pool.h
test/: CMakeLists.txt  dc.cpp  sampling.cpp  scan.cpp
